# RofiInterface

./: Cargo.toml
src/: lib.rs  loopnm.rs  main.rs  nmcli.rs  var.rs
