[package]
name = "rofi-controller"
version = "0.1.0"
authors = ["lusamreth <lusamreth>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
tokio = { version ="1.4.0", features = ["full"] }
async-recursion = "0.2"
